--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.10.0"
-  },
-  "dependencies": {
+    "webpack-merge": "^5.10.0",
     "phaser": "^3.70.0"
   }
 }
