--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "clean-webpack-plugin": "^4.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "phaser": "^3.70.0",
     "raw-loader": "^4.0.2",
     "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.10.0",
-    "phaser": "^3.70.0"
+    "webpack-merge": "^5.10.0"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.7.4"
   }
 }
